log
Thu Mar 19 07:31:54 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:18: error: implicit declaration of function ‘firt’; did you mean ‘first’? [-Wimplicit-function-declaration]
   56 |    int primero = firt(L);
      |                  ^~~~
      |                  first
exercises.c:57:18: error: comparison between pointer and integer [-Werror]
   57 |    while(primero != NULL){
      |                  ^~
exercises.c:59:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       primero = next(L);
      |               ^
cc1: all warnings being treated as errors
604c124
Thu Mar 19 07:33:30 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       suma+= primero;
      |           ^~
b364c2b
Thu Mar 19 07:34:44 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b40b556
Thu Mar 19 07:44:13 PM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:26: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   46 |    for (int i = 1; i < 10, i++){
      |                          ^
exercises.c:46:31: error: expected ‘;’ before ‘)’ token
   46 |    for (int i = 1; i < 10, i++){
      |                               ^
      |                               ;
exercises.c:48:20: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   48 |       nuevoElemento=i;
      |                    ^
cc1: all warnings being treated as errors
d17abe4
Thu Mar 19 07:44:33 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:20: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   48 |       nuevoElemento=i;
      |                    ^
45c1148
Thu Mar 19 07:45:00 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
dfdfbf2
Thu Mar 19 07:46:45 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8f2a0e9
